# KEA_DAT_DevOps_2024_Autumn

./: .gitignore  LICENSE  README.adoc  combined_course_markdown.md  package-lock.json  package.json  repositories.py
.github/workflows/: validate_repositories_py_file.yaml
00._Course_Material/02._Slides/10._Databases_ORM_Data_scraping_Web_crawling/27._Web_Scraping_Crawling/02._Python_Basic_Web_Scraper/: main.py  pyproject.toml
00._Course_Material/02._Slides/10._Databases_ORM_Data_scraping_Web_crawling/27._Web_Scraping_Crawling/03._Python_Web_Crawler/: pyproject.toml
00._Course_Material/02._Slides/10._Databases_ORM_Data_scraping_Web_crawling/27._Web_Scraping_Crawling/04._Scrapy_Basic/: my_spider.py  pyproject.toml
01._Sessions/: app.js  package-lock.json  package.json
02._Docker_Node_Project/: Dockerfile  app.js  package-lock.json  package.json
03._Hot-reload_Node/: docker-compose.dev.yaml
04._Debug_Docker-compose/: app.js  docker-compose.yml  package-lock.json  package.json
05._End-to-end_testing/: package-lock.json  package.json  playwright.config.js
06._Schema_Migrations/: 20241107133227_mro_migration.js  classicmodels_mro_docs.html  docker-compose.yml  index.js  knexfile.js  mydatabase.json  package-lock.json  package.json
07._Cheerio_Scraping/: index.js  package-lock.json  package.json  proshop.html
08._BeautifulSoup4/: main.py  webcrawler.py
10._ElasticSearch/: .env.sample  crawler.js  esClient.js  indexer.js  searcher.js
11._Terraform_VM/: .terraform.lock.hcl  inline_commands.sh  main.tf  outputs.tf  variables.tf
12._Kubernetes/: deployment.yaml  deployment_service.yaml  keasmonkey.sh  service.yaml
(+260 files in other folders)
