[tool.poetry]
name = "02-python-basic-web-scraper"
version = "0.1.0"
description = ""
authors = ["anderslatif <anderslatif@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "02"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
